--- a/safelink2.html
+++ b/safelink2.html
@@ -294,6 +294,7 @@ function startTimer(btn,time,i){
       btn.onclick=()=>{
         if(i===correctIndex){
           showDownloadProgress();
+          try{window.location.href=decodedURL;}catch(e){console.warn("redirect error",e);}
         }else{
           showOverlay();
           window.open(smartLink,"_blank");
@@ -313,7 +314,19 @@ function showDownloadProgress(){
   const text=document.getElementById("progressText");
   progress.style.display="block";
 
-  const isMobile=/Android|iPhone|iPad|iPod|Mobile/i.test(navigator.userAgent);
+  const manualBtn=document.createElement("button");
+  manualBtn.textContent="🔗 Klik di sini jika tidak otomatis dialihkan";
+  manualBtn.style.marginTop="15px";
+  manualBtn.style.padding="12px 25px";
+  manualBtn.style.border="none";
+  manualBtn.style.borderRadius="10px";
+  manualBtn.style.fontWeight="600";
+  manualBtn.style.background="linear-gradient(135deg,#3b82f6,#06b6d4)";
+  manualBtn.style.color="#fff";
+  manualBtn.style.cursor="pointer";
+  manualBtn.onclick=()=>window.location.href=decodedURL;
+  progress.appendChild(manualBtn);
+
   let percent=0;
   const interval=setInterval(()=>{
     percent+=5;
@@ -323,22 +336,7 @@ function showDownloadProgress(){
     if(percent>=100){
       clearInterval(interval);
       text.textContent="✅ Siap mengunduh!";
-      if(isMobile){
-        const manualBtn=document.createElement("button");
-        manualBtn.textContent="📥 Klik di sini untuk membuka sumber";
-        manualBtn.style.marginTop="15px";
-        manualBtn.style.padding="12px 25px";
-        manualBtn.style.border="none";
-        manualBtn.style.borderRadius="10px";
-        manualBtn.style.fontWeight="600";
-        manualBtn.style.background="linear-gradient(135deg,#3b82f6,#06b6d4)";
-        manualBtn.style.color="#fff";
-        manualBtn.style.cursor="pointer";
-        manualBtn.onclick=()=>window.location.href=decodedURL;
-        progress.appendChild(manualBtn);
-      }else{
-        try{window.location.href=decodedURL;}catch(e){console.warn("redirect gagal",e);}
-      }
+      try{window.location.href=decodedURL;}catch(e){console.warn("redirect gagal",e);}
     }
   },200);
 }
